improvements on animation

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             y: -100,
             opacity:0,
             duration: 0.75,
-            ease:"bounce.out",
+            ease:"back.out",
             
             stagger:{
                 from:0,
